--- a/templates/survey.html
+++ b/templates/survey.html
@@ -46,7 +46,7 @@
                 <input type="number" class="form-control" id="healthcare" name="healthcare" required>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <a href="http://localhost:8501" class="btn btn-success">View Dashboard</a>
+            <a href="https://surveyanalysis-mkrlehns6qpm24fzgsw8m8.streamlit.app/" class="btn btn-success">View Dashboard</a>
         </form>
     </div>
 
