--- a/templates/survey1.html
+++ b/templates/survey1.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Income Spending Survey</title>
     <!-- Bootstrap CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJb3V1m8tC7yEVrx0bmER3sI4gkbcw1UoiWfD0V6XyST/aWEqaIY4WnUczdF" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJb3V1m8tC7yEVrx0bmER3sI4gkbcw1UoiWfD0V6XyST/aWEqaIY4WnUczdF" crossorigin="anonymous"> -->
+
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
@@ -72,7 +74,8 @@
             </div>
 
             <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Submit</button> <br>
+                <a href="https://surveyanalysis-mkrlehns6qpm24fzgsw8m8.streamlit.app/" class="btn btn-success">View Dashboard</a>
             </div>
         </form>
     </div>
