--- a/templates/survey1.html
+++ b/templates/survey1.html
@@ -10,8 +10,9 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container-fluid mt-5 col-lg-8">
         <h1 class="text-center mb-4">Income Spending Survey</h1><hr>
+        <p>Kindly fill the form below</p>
         
         <!-- Display flash messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
